Add Glitch theme with RGB channel split and jitter effects
New theme featuring RGB color separation via pseudo-elements,
random text skewing, and clip-path based distortion. Supports
both SIGN and FLOW modes with configurable intensity parameter.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/css/themes/default.css">
   <link rel="stylesheet" href="/css/themes/neon.css">
   <link rel="stylesheet" href="/css/themes/retro.css">
+  <link rel="stylesheet" href="/css/themes/glitch.css">
 </head>
 <body>
   <div id="app">
@@ -27,6 +28,7 @@
   <script src="/js/themes/default-renderer.js"></script>
   <script src="/js/themes/neon-renderer.js"></script>
   <script src="/js/themes/retro-renderer.js"></script>
+  <script src="/js/themes/glitch-renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
