Add Typewriter theme with character-by-character typing effect
New theme featuring sequential character reveal in SIGN mode with
blinking block cursor and auto-loop. FLOW mode uses typewriter font
styling with standard scrolling. Supports configurable typing speed.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/css/themes/neon.css">
   <link rel="stylesheet" href="/css/themes/retro.css">
   <link rel="stylesheet" href="/css/themes/glitch.css">
+  <link rel="stylesheet" href="/css/themes/typewriter.css">
 </head>
 <body>
   <div id="app">
@@ -29,6 +30,7 @@
   <script src="/js/themes/neon-renderer.js"></script>
   <script src="/js/themes/retro-renderer.js"></script>
   <script src="/js/themes/glitch-renderer.js"></script>
+  <script src="/js/themes/typewriter-renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
