Add Gradient theme with rainbow text and flowing animation
New theme featuring animated rainbow gradient text using
background-clip. Custom colors generate HSL-based gradients
with hue offsets. Supports both SIGN and FLOW modes.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/css/themes/retro.css">
   <link rel="stylesheet" href="/css/themes/glitch.css">
   <link rel="stylesheet" href="/css/themes/typewriter.css">
+  <link rel="stylesheet" href="/css/themes/gradient.css">
 </head>
 <body>
   <div id="app">
@@ -31,6 +32,7 @@
   <script src="/js/themes/retro-renderer.js"></script>
   <script src="/js/themes/glitch-renderer.js"></script>
   <script src="/js/themes/typewriter-renderer.js"></script>
+  <script src="/js/themes/gradient-renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
