Add Hologram theme with chromatic aberration and scanline sweep
New theme featuring subtle RGB offset via pseudo-elements, a
sweeping scanline overlay, translucent flicker animation, and
multi-layer blue glow. Supports both SIGN and FLOW modes.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="/css/themes/glitch.css">
   <link rel="stylesheet" href="/css/themes/typewriter.css">
   <link rel="stylesheet" href="/css/themes/gradient.css">
+  <link rel="stylesheet" href="/css/themes/hologram.css">
 </head>
 <body>
   <div id="app">
@@ -33,6 +34,7 @@
   <script src="/js/themes/glitch-renderer.js"></script>
   <script src="/js/themes/typewriter-renderer.js"></script>
   <script src="/js/themes/gradient-renderer.js"></script>
+  <script src="/js/themes/hologram-renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
