--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <!-- Core -->
   <script src="/js/core/url-parser.js"></script>
   <script src="/js/core/text-engine.js"></script>
+  <script src="/js/core/theme-manager.js"></script>
 
   <!-- Themes -->
-  <script src="/js/themes/theme-manager.js"></script>
   <script src="/js/themes/default-renderer.js"></script>
   <script src="/js/themes/neon-renderer.js"></script>
   <script src="/js/themes/retro-renderer.js"></script>
