Reorganize themes into self-contained directories

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <!-- Styles -->
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/landing.css">
-  <link rel="stylesheet" href="/css/themes/default.css">
-  <link rel="stylesheet" href="/css/themes/neon.css">
-  <link rel="stylesheet" href="/css/themes/retro.css">
-  <link rel="stylesheet" href="/css/themes/glitch.css">
-  <link rel="stylesheet" href="/css/themes/typewriter.css">
-  <link rel="stylesheet" href="/css/themes/gradient.css">
-  <link rel="stylesheet" href="/css/themes/hologram.css">
+  <link rel="stylesheet" href="/themes/default/style.css">
+  <link rel="stylesheet" href="/themes/neon/style.css">
+  <link rel="stylesheet" href="/themes/retro/style.css">
+  <link rel="stylesheet" href="/themes/glitch/style.css">
+  <link rel="stylesheet" href="/themes/typewriter/style.css">
+  <link rel="stylesheet" href="/themes/gradient/style.css">
+  <link rel="stylesheet" href="/themes/hologram/style.css">
 </head>
 <body>
   <div id="app">
@@ -28,13 +28,13 @@
   <script src="/js/core/theme-manager.js"></script>
 
   <!-- Themes -->
-  <script src="/js/themes/default-renderer.js"></script>
-  <script src="/js/themes/neon-renderer.js"></script>
-  <script src="/js/themes/retro-renderer.js"></script>
-  <script src="/js/themes/glitch-renderer.js"></script>
-  <script src="/js/themes/typewriter-renderer.js"></script>
-  <script src="/js/themes/gradient-renderer.js"></script>
-  <script src="/js/themes/hologram-renderer.js"></script>
+  <script src="/themes/default/renderer.js"></script>
+  <script src="/themes/neon/renderer.js"></script>
+  <script src="/themes/retro/renderer.js"></script>
+  <script src="/themes/glitch/renderer.js"></script>
+  <script src="/themes/typewriter/renderer.js"></script>
+  <script src="/themes/gradient/renderer.js"></script>
+  <script src="/themes/hologram/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
