--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <link rel="stylesheet" href="/themes/typewriter/style.css">
   <link rel="stylesheet" href="/themes/gradient/style.css">
   <link rel="stylesheet" href="/themes/hologram/style.css">
+  <link rel="stylesheet" href="/themes/broadcast/style.css">
+  <link rel="stylesheet" href="/themes/marquee/style.css">
+  <link rel="stylesheet" href="/themes/pulse/style.css">
+  <link rel="stylesheet" href="/themes/aurora/style.css">
+  <link rel="stylesheet" href="/themes/firework/style.css">
 </head>
 <body>
   <div id="app">
@@ -35,6 +40,11 @@
   <script src="/themes/typewriter/renderer.js"></script>
   <script src="/themes/gradient/renderer.js"></script>
   <script src="/themes/hologram/renderer.js"></script>
+  <script src="/themes/broadcast/renderer.js"></script>
+  <script src="/themes/marquee/renderer.js"></script>
+  <script src="/themes/pulse/renderer.js"></script>
+  <script src="/themes/aurora/renderer.js"></script>
+  <script src="/themes/firework/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
