Wire up Wood theme in index.html, app.js, and CLAUDE.md

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/themes/pulse/style.css">
   <link rel="stylesheet" href="/themes/aurora/style.css">
   <link rel="stylesheet" href="/themes/firework/style.css">
+  <link rel="stylesheet" href="/themes/wood/style.css">
 </head>
 <body>
   <div id="app">
@@ -45,6 +46,7 @@
   <script src="/themes/pulse/renderer.js"></script>
   <script src="/themes/aurora/renderer.js"></script>
   <script src="/themes/firework/renderer.js"></script>
+  <script src="/themes/wood/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
