feat: add several high-fidelity themes including a high-precision Street Sign

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   <link rel="stylesheet" href="/themes/aurora/style.css">
   <link rel="stylesheet" href="/themes/firework/style.css">
   <link rel="stylesheet" href="/themes/wood/style.css">
+  <link rel="stylesheet" href="/themes/cyber/style.css">
+  <link rel="stylesheet" href="/themes/tokyo/style.css">
+  <link rel="stylesheet" href="/themes/blueprint/style.css">
+  <link rel="stylesheet" href="/themes/monolith/style.css">
+  <link rel="stylesheet" href="/themes/street-sign/style.css">
 </head>
 <body>
   <div id="app">
@@ -47,6 +52,11 @@
   <script src="/themes/aurora/renderer.js"></script>
   <script src="/themes/firework/renderer.js"></script>
   <script src="/themes/wood/renderer.js"></script>
+  <script src="/themes/cyber/renderer.js"></script>
+  <script src="/themes/tokyo/renderer.js"></script>
+  <script src="/themes/blueprint/renderer.js"></script>
+  <script src="/themes/monolith/renderer.js"></script>
+  <script src="/themes/street-sign/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
