feat: add high-fidelity skeuomorphic 'do-not-disturb' theme with full configuration support

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="/themes/blueprint/style.css">
   <link rel="stylesheet" href="/themes/monolith/style.css">
   <link rel="stylesheet" href="/themes/street-sign/style.css">
+  <link rel="stylesheet" href="/themes/do-not-disturb/style.css">
 </head>
 <body>
   <div id="app">
@@ -57,6 +58,7 @@
   <script src="/themes/blueprint/renderer.js"></script>
   <script src="/themes/monolith/renderer.js"></script>
   <script src="/themes/street-sign/renderer.js"></script>
+  <script src="/themes/do-not-disturb/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
