style: complete redesign of the landing page for better clarity and modern utility

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>led.run</title>
-  <meta name="description" content="Minimal digital signage. URL is your sign.">
+  <title>led.run — Instant Digital Signage</title>
+  <meta name="description" content="Transform any browser into a professional digital sign. No apps, no hardware. URL is your canvas.">
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <!-- Styles -->
   <link rel="stylesheet" href="/css/main.css">
