--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/landing.css">
+  <link rel="stylesheet" href="/css/toolbar.css">
   <link rel="stylesheet" href="/themes/default/style.css">
   <link rel="stylesheet" href="/themes/neon/style.css">
   <link rel="stylesheet" href="/themes/retro/style.css">
@@ -70,6 +71,7 @@
   <script src="/js/ui/wakelock.js"></script>
   <script src="/js/ui/cursor.js"></script>
   <script src="/js/ui/controls.js"></script>
+  <script src="/js/ui/toolbar.js"></script>
 
   <!-- App Entry -->
   <script src="/js/app.js"></script>
