feat: add dot-matrix theme with wrap mode support
Skeuomorphic LED dot-matrix board theme with realistic lighting,
sign/flow modes, card-type scale strategy, and wrap param for
height-wrapping the board to text content.

Custom params: res, gap, glow, shape, bezel, weight, flicker, fill, wrap

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <link rel="stylesheet" href="/themes/monolith/style.css">
   <link rel="stylesheet" href="/themes/street-sign/style.css">
   <link rel="stylesheet" href="/themes/do-not-disturb/style.css">
+  <link rel="stylesheet" href="/themes/dot-matrix/style.css">
 </head>
 <body>
   <div id="app">
@@ -65,6 +66,7 @@
   <script src="/themes/monolith/renderer.js"></script>
   <script src="/themes/street-sign/renderer.js"></script>
   <script src="/themes/do-not-disturb/renderer.js"></script>
+  <script src="/themes/dot-matrix/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
