feat: add Presentation API casting to external displays
Add Cast module (js/ui/cast.js) using W3C Presentation API for casting
LED signs to Chromecast/smart TVs. Controller sends URL config via
sessionStorage-based reconnect; receiver renders clean display without
toolbar/controls. Cast button conditionally renders only in supported
browsers (Chrome/Edge) with breathing pulse animation when active.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <script src="/js/ui/wakelock.js"></script>
   <script src="/js/ui/cursor.js"></script>
   <script src="/js/ui/controls.js"></script>
+  <script src="/js/ui/cast.js"></script>
   <script src="/js/ui/toolbar.js"></script>
 
   <!-- App Entry -->
