--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
   <script src="/js/core/url-parser.js"></script>
   <script src="/js/core/text-engine.js"></script>
   <script src="/js/core/theme-manager.js"></script>
+  <script src="/js/core/i18n.js"></script>
+
+  <!-- Locales -->
+  <script src="/locales/en.js"></script>
+  <script src="/locales/zh.js"></script>
+  <script src="/locales/ja.js"></script>
+  <script src="/locales/ko.js"></script>
+  <script src="/locales/es.js"></script>
+  <script src="/locales/fr.js"></script>
+  <script src="/locales/de.js"></script>
 
   <!-- Themes -->
   <script src="/themes/default/renderer.js"></script>
