--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/landing.css">
   <link rel="stylesheet" href="/css/toolbar.css">
+  <link rel="stylesheet" href="/css/settings.css">
   <link rel="stylesheet" href="/themes/default/style.css">
   <link rel="stylesheet" href="/themes/neon/style.css">
   <link rel="stylesheet" href="/themes/retro/style.css">
@@ -90,6 +91,7 @@
   <script src="/js/ui/controls.js"></script>
   <script src="/js/ui/cast.js"></script>
   <script src="/js/ui/toolbar.js"></script>
+  <script src="/js/ui/settings.js"></script>
 
   <!-- App Entry -->
   <script src="/js/app.js"></script>
