--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- Core -->
   <script src="/js/core/url-parser.js"></script>
   <script src="/js/core/text-engine.js"></script>
-  <script src="/js/core/theme-manager.js"></script>
+  <script src="/js/core/text-manager.js"></script>
   <script src="/js/core/i18n.js"></script>
 
   <!-- Locales -->
