refactor: rename themes/ directory to texts/
Rename themes/ to texts/ for multi-product alignment. Updated all
index.html link/script paths, _redirects, _headers, and GEMINI.md
references.

--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
   <link rel="stylesheet" href="/css/landing.css">
   <link rel="stylesheet" href="/css/toolbar.css">
   <link rel="stylesheet" href="/css/settings.css">
-  <link rel="stylesheet" href="/themes/default/style.css">
-  <link rel="stylesheet" href="/themes/neon/style.css">
-  <link rel="stylesheet" href="/themes/retro/style.css">
-  <link rel="stylesheet" href="/themes/glitch/style.css">
-  <link rel="stylesheet" href="/themes/typewriter/style.css">
-  <link rel="stylesheet" href="/themes/gradient/style.css">
-  <link rel="stylesheet" href="/themes/hologram/style.css">
-  <link rel="stylesheet" href="/themes/broadcast/style.css">
-  <link rel="stylesheet" href="/themes/marquee/style.css">
-  <link rel="stylesheet" href="/themes/pulse/style.css">
-  <link rel="stylesheet" href="/themes/aurora/style.css">
-  <link rel="stylesheet" href="/themes/firework/style.css">
-  <link rel="stylesheet" href="/themes/wood/style.css">
-  <link rel="stylesheet" href="/themes/cyber/style.css">
-  <link rel="stylesheet" href="/themes/tokyo/style.css">
-  <link rel="stylesheet" href="/themes/blueprint/style.css">
-  <link rel="stylesheet" href="/themes/monolith/style.css">
-  <link rel="stylesheet" href="/themes/street-sign/style.css">
-  <link rel="stylesheet" href="/themes/do-not-disturb/style.css">
-  <link rel="stylesheet" href="/themes/dot-matrix/style.css">
+  <link rel="stylesheet" href="/texts/default/style.css">
+  <link rel="stylesheet" href="/texts/neon/style.css">
+  <link rel="stylesheet" href="/texts/retro/style.css">
+  <link rel="stylesheet" href="/texts/glitch/style.css">
+  <link rel="stylesheet" href="/texts/typewriter/style.css">
+  <link rel="stylesheet" href="/texts/gradient/style.css">
+  <link rel="stylesheet" href="/texts/hologram/style.css">
+  <link rel="stylesheet" href="/texts/broadcast/style.css">
+  <link rel="stylesheet" href="/texts/marquee/style.css">
+  <link rel="stylesheet" href="/texts/pulse/style.css">
+  <link rel="stylesheet" href="/texts/aurora/style.css">
+  <link rel="stylesheet" href="/texts/firework/style.css">
+  <link rel="stylesheet" href="/texts/wood/style.css">
+  <link rel="stylesheet" href="/texts/cyber/style.css">
+  <link rel="stylesheet" href="/texts/tokyo/style.css">
+  <link rel="stylesheet" href="/texts/blueprint/style.css">
+  <link rel="stylesheet" href="/texts/monolith/style.css">
+  <link rel="stylesheet" href="/texts/street-sign/style.css">
+  <link rel="stylesheet" href="/texts/do-not-disturb/style.css">
+  <link rel="stylesheet" href="/texts/dot-matrix/style.css">
 </head>
 <body>
   <div id="app">
@@ -63,26 +63,26 @@
   <script src="/locales/de.js"></script>
 
   <!-- Themes -->
-  <script src="/themes/default/renderer.js"></script>
-  <script src="/themes/neon/renderer.js"></script>
-  <script src="/themes/retro/renderer.js"></script>
-  <script src="/themes/glitch/renderer.js"></script>
-  <script src="/themes/typewriter/renderer.js"></script>
-  <script src="/themes/gradient/renderer.js"></script>
-  <script src="/themes/hologram/renderer.js"></script>
-  <script src="/themes/broadcast/renderer.js"></script>
-  <script src="/themes/marquee/renderer.js"></script>
-  <script src="/themes/pulse/renderer.js"></script>
-  <script src="/themes/aurora/renderer.js"></script>
-  <script src="/themes/firework/renderer.js"></script>
-  <script src="/themes/wood/renderer.js"></script>
-  <script src="/themes/cyber/renderer.js"></script>
-  <script src="/themes/tokyo/renderer.js"></script>
-  <script src="/themes/blueprint/renderer.js"></script>
-  <script src="/themes/monolith/renderer.js"></script>
-  <script src="/themes/street-sign/renderer.js"></script>
-  <script src="/themes/do-not-disturb/renderer.js"></script>
-  <script src="/themes/dot-matrix/renderer.js"></script>
+  <script src="/texts/default/renderer.js"></script>
+  <script src="/texts/neon/renderer.js"></script>
+  <script src="/texts/retro/renderer.js"></script>
+  <script src="/texts/glitch/renderer.js"></script>
+  <script src="/texts/typewriter/renderer.js"></script>
+  <script src="/texts/gradient/renderer.js"></script>
+  <script src="/texts/hologram/renderer.js"></script>
+  <script src="/texts/broadcast/renderer.js"></script>
+  <script src="/texts/marquee/renderer.js"></script>
+  <script src="/texts/pulse/renderer.js"></script>
+  <script src="/texts/aurora/renderer.js"></script>
+  <script src="/texts/firework/renderer.js"></script>
+  <script src="/texts/wood/renderer.js"></script>
+  <script src="/texts/cyber/renderer.js"></script>
+  <script src="/texts/tokyo/renderer.js"></script>
+  <script src="/texts/blueprint/renderer.js"></script>
+  <script src="/texts/monolith/renderer.js"></script>
+  <script src="/texts/street-sign/renderer.js"></script>
+  <script src="/texts/do-not-disturb/renderer.js"></script>
+  <script src="/texts/dot-matrix/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
