feat: add multi-product routing to App.init()
Refactor app.js to route based on product type from URLParser.
Extract _initText, add _initLight, _initSound, _showAudioError.
Common UI initialization shared via _initCommonUI. Add new core
scripts to index.html load order.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
   <script src="/js/core/url-parser.js"></script>
   <script src="/js/core/text-engine.js"></script>
   <script src="/js/core/text-manager.js"></script>
+  <script src="/js/core/light-manager.js"></script>
+  <script src="/js/core/sound-manager.js"></script>
+  <script src="/js/core/audio-engine.js"></script>
   <script src="/js/core/i18n.js"></script>
 
   <!-- Locales -->
