feat: add light effects, sound visualizers, and integrate into app
- Add 8 light effects: solid, strobe, disco, gradient, emergency, candle, rainbow, sos
- Add 4 sound visualizers: bars, waveform, circle, particles
- Add css/light.css and css/sound.css base product styles
- Update index.html with all new script and link tags
- Add i18n translations for light/sound across all 7 locales

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="/css/landing.css">
   <link rel="stylesheet" href="/css/toolbar.css">
   <link rel="stylesheet" href="/css/settings.css">
+  <link rel="stylesheet" href="/css/light.css">
+  <link rel="stylesheet" href="/css/sound.css">
   <link rel="stylesheet" href="/texts/default/style.css">
   <link rel="stylesheet" href="/texts/neon/style.css">
   <link rel="stylesheet" href="/texts/retro/style.css">
@@ -86,6 +88,22 @@
   <script src="/texts/street-sign/renderer.js"></script>
   <script src="/texts/do-not-disturb/renderer.js"></script>
   <script src="/texts/dot-matrix/renderer.js"></script>
+
+  <!-- Light Effects -->
+  <script src="/lights/solid/renderer.js"></script>
+  <script src="/lights/strobe/renderer.js"></script>
+  <script src="/lights/disco/renderer.js"></script>
+  <script src="/lights/gradient/renderer.js"></script>
+  <script src="/lights/emergency/renderer.js"></script>
+  <script src="/lights/candle/renderer.js"></script>
+  <script src="/lights/rainbow/renderer.js"></script>
+  <script src="/lights/sos/renderer.js"></script>
+
+  <!-- Sound Visualizers -->
+  <script src="/sounds/bars/renderer.js"></script>
+  <script src="/sounds/waveform/renderer.js"></script>
+  <script src="/sounds/circle/renderer.js"></script>
+  <script src="/sounds/particles/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
