feat: register 20 new themes in config files
Add script tags in index.html, KNOWN_PARAMS entries in settings.js
(including sound adapter knownParamOverrides for shape/depth), and
landing page presets in app.js for all new light effects and sound
visualizers.

--- a/index.html
+++ b/index.html
@@ -98,12 +98,32 @@
   <script src="/lights/candle/renderer.js"></script>
   <script src="/lights/rainbow/renderer.js"></script>
   <script src="/lights/sos/renderer.js"></script>
+  <script src="/lights/breathing/renderer.js"></script>
+  <script src="/lights/sunset/renderer.js"></script>
+  <script src="/lights/heartbeat/renderer.js"></script>
+  <script src="/lights/matrix-rain/renderer.js"></script>
+  <script src="/lights/aurora-waves/renderer.js"></script>
+  <script src="/lights/campfire/renderer.js"></script>
+  <script src="/lights/lightning/renderer.js"></script>
+  <script src="/lights/kaleidoscope/renderer.js"></script>
+  <script src="/lights/plasma/renderer.js"></script>
+  <script src="/lights/lava-lamp/renderer.js"></script>
 
   <!-- Sound Visualizers -->
   <script src="/sounds/bars/renderer.js"></script>
   <script src="/sounds/waveform/renderer.js"></script>
   <script src="/sounds/circle/renderer.js"></script>
   <script src="/sounds/particles/renderer.js"></script>
+  <script src="/sounds/meter/renderer.js"></script>
+  <script src="/sounds/equalizer/renderer.js"></script>
+  <script src="/sounds/ripple/renderer.js"></script>
+  <script src="/sounds/wave-stack/renderer.js"></script>
+  <script src="/sounds/radar/renderer.js"></script>
+  <script src="/sounds/tunnel/renderer.js"></script>
+  <script src="/sounds/dna-helix/renderer.js"></script>
+  <script src="/sounds/spectrum-3d/renderer.js"></script>
+  <script src="/sounds/fireworks/renderer.js"></script>
+  <script src="/sounds/galaxy/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
