chore: update sound visualizer script tags and landing presets
- Updated index.html script tags to load 12 new WMP visualizers
- Updated SOUND_PRESETS in app.js with new visualizer IDs and icons
- Changed descKey format to 'landing.sound.preset.{id}' for consistency
- Removed old visualizer references (14 → 12 visualizers)

Icons:
- bars: 🎵, scope: 📊, ocean: 🌊, alchemy: ⚗️
- battery: 🔋, ambience: 💫, particle: ✨
- musical-colors: 🌈, spikes: ⭐, plenoptic: 🔮
- waveform-3d: 📈, spectrum-circle: ⭕

--- a/index.html
+++ b/index.html
@@ -111,19 +111,17 @@
 
   <!-- Sound Visualizers -->
   <script src="/sounds/bars/renderer.js"></script>
-  <script src="/sounds/waveform/renderer.js"></script>
-  <script src="/sounds/circle/renderer.js"></script>
-  <script src="/sounds/particles/renderer.js"></script>
-  <script src="/sounds/meter/renderer.js"></script>
-  <script src="/sounds/equalizer/renderer.js"></script>
-  <script src="/sounds/ripple/renderer.js"></script>
-  <script src="/sounds/wave-stack/renderer.js"></script>
-  <script src="/sounds/radar/renderer.js"></script>
-  <script src="/sounds/tunnel/renderer.js"></script>
-  <script src="/sounds/dna-helix/renderer.js"></script>
-  <script src="/sounds/spectrum-3d/renderer.js"></script>
-  <script src="/sounds/fireworks/renderer.js"></script>
-  <script src="/sounds/galaxy/renderer.js"></script>
+  <script src="/sounds/scope/renderer.js"></script>
+  <script src="/sounds/ocean/renderer.js"></script>
+  <script src="/sounds/alchemy/renderer.js"></script>
+  <script src="/sounds/battery/renderer.js"></script>
+  <script src="/sounds/ambience/renderer.js"></script>
+  <script src="/sounds/particle/renderer.js"></script>
+  <script src="/sounds/musical-colors/renderer.js"></script>
+  <script src="/sounds/spikes/renderer.js"></script>
+  <script src="/sounds/plenoptic/renderer.js"></script>
+  <script src="/sounds/waveform-3d/renderer.js"></script>
+  <script src="/sounds/spectrum-circle/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
