--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>led.run — Instant Digital Signage</title>
-  <meta name="description" content="Transform any browser into a professional digital sign. No apps, no hardware. URL is your canvas.">
+  <title>led.run — Display Toolkit</title>
+  <meta name="description" content="Turn any screen into a text sign, light effect, or sound visualizer. 50+ display modes. No apps, no accounts — just a URL.">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <!-- SEO -->
+  <link rel="canonical" href="https://led.run/">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://led.run/">
+  <meta property="og:title" content="led.run — Display Toolkit">
+  <meta property="og:description" content="Turn any screen into a text sign, light effect, or sound visualizer. 50+ display modes. No apps, no accounts — just a URL.">
+  <meta property="og:site_name" content="led.run">
+  <meta property="og:locale" content="en_US">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="led.run — Display Toolkit">
+  <meta name="twitter:description" content="Turn any screen into a text sign, light effect, or sound visualizer. 50+ display modes. No apps, no accounts — just a URL.">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
