--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="/css/settings.css">
   <link rel="stylesheet" href="/css/light.css">
   <link rel="stylesheet" href="/css/sound.css">
+  <link rel="stylesheet" href="/css/time.css">
   <link rel="stylesheet" href="/texts/default/style.css">
   <link rel="stylesheet" href="/texts/neon/style.css">
   <link rel="stylesheet" href="/texts/retro/style.css">
@@ -68,6 +69,8 @@
   <script src="/js/core/light-manager.js"></script>
   <script src="/js/core/sound-manager.js"></script>
   <script src="/js/core/audio-engine.js"></script>
+  <script src="/js/core/time-manager.js"></script>
+  <script src="/js/core/time-utils.js"></script>
   <script src="/js/core/i18n.js"></script>
 
   <!-- Locales -->
@@ -134,6 +137,22 @@
   <script src="/sounds/plenoptic/renderer.js"></script>
   <script src="/sounds/waveform-3d/renderer.js"></script>
   <script src="/sounds/spectrum-circle/renderer.js"></script>
+
+  <!-- Clock Themes -->
+  <script src="/times/digital/renderer.js"></script>
+  <script src="/times/minimal/renderer.js"></script>
+  <script src="/times/retro/renderer.js"></script>
+  <script src="/times/binary/renderer.js"></script>
+  <script src="/times/lcd/renderer.js"></script>
+  <script src="/times/analog/renderer.js"></script>
+  <script src="/times/flip/renderer.js"></script>
+  <script src="/times/nixie/renderer.js"></script>
+  <script src="/times/neon/renderer.js"></script>
+  <script src="/times/word/renderer.js"></script>
+  <script src="/times/sun/renderer.js"></script>
+  <script src="/times/calendar/renderer.js"></script>
+  <script src="/times/matrix/renderer.js"></script>
+  <script src="/times/gradient/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
