feat: update SEO meta tags and manifest to include Time product
Add clock display mention and update "50+" to "60+" display modes
across meta description, OG description, Twitter description, and
PWA manifest (20+18+12+14 = 64 total modes).

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>led.run — Display Toolkit</title>
-  <meta name="description" content="Turn any screen into a text sign, light effect, or sound visualizer. 50+ display modes. No apps, no accounts — just a URL.">
+  <meta name="description" content="Turn any screen into a text sign, light effect, sound visualizer, or clock display. 60+ display modes. No apps, no accounts — just a URL.">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -15,12 +15,12 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://led.run/">
   <meta property="og:title" content="led.run — Display Toolkit">
-  <meta property="og:description" content="Turn any screen into a text sign, light effect, or sound visualizer. 50+ display modes. No apps, no accounts — just a URL.">
+  <meta property="og:description" content="Turn any screen into a text sign, light effect, sound visualizer, or clock display. 60+ display modes. No apps, no accounts — just a URL.">
   <meta property="og:site_name" content="led.run">
   <meta property="og:locale" content="en_US">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="led.run — Display Toolkit">
-  <meta name="twitter:description" content="Turn any screen into a text sign, light effect, or sound visualizer. 50+ display modes. No apps, no accounts — just a URL.">
+  <meta name="twitter:description" content="Turn any screen into a text sign, light effect, sound visualizer, or clock display. 60+ display modes. No apps, no accounts — just a URL.">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
