--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>led.run — Display Toolkit</title>
-  <meta name="description" content="Turn any screen into a text sign, light effect, or sound visualizer. 50+ display modes. No apps, no accounts — just a URL.">
+  <meta name="description" content="Turn any screen into a text sign, light effect, sound visualizer, or clock display. 60+ display modes. No apps, no accounts — just a URL.">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -15,12 +15,12 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://led.run/">
   <meta property="og:title" content="led.run — Display Toolkit">
-  <meta property="og:description" content="Turn any screen into a text sign, light effect, or sound visualizer. 50+ display modes. No apps, no accounts — just a URL.">
+  <meta property="og:description" content="Turn any screen into a text sign, light effect, sound visualizer, or clock display. 60+ display modes. No apps, no accounts — just a URL.">
   <meta property="og:site_name" content="led.run">
   <meta property="og:locale" content="en_US">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="led.run — Display Toolkit">
-  <meta name="twitter:description" content="Turn any screen into a text sign, light effect, or sound visualizer. 50+ display modes. No apps, no accounts — just a URL.">
+  <meta name="twitter:description" content="Turn any screen into a text sign, light effect, sound visualizer, or clock display. 60+ display modes. No apps, no accounts — just a URL.">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="/css/settings.css">
   <link rel="stylesheet" href="/css/light.css">
   <link rel="stylesheet" href="/css/sound.css">
+  <link rel="stylesheet" href="/css/time.css">
   <link rel="stylesheet" href="/texts/default/style.css">
   <link rel="stylesheet" href="/texts/neon/style.css">
   <link rel="stylesheet" href="/texts/retro/style.css">
@@ -68,6 +69,8 @@
   <script src="/js/core/light-manager.js"></script>
   <script src="/js/core/sound-manager.js"></script>
   <script src="/js/core/audio-engine.js"></script>
+  <script src="/js/core/time-manager.js"></script>
+  <script src="/js/core/time-utils.js"></script>
   <script src="/js/core/i18n.js"></script>
 
   <!-- Locales -->
@@ -134,6 +137,22 @@
   <script src="/sounds/plenoptic/renderer.js"></script>
   <script src="/sounds/waveform-3d/renderer.js"></script>
   <script src="/sounds/spectrum-circle/renderer.js"></script>
+
+  <!-- Clock Themes -->
+  <script src="/times/digital/renderer.js"></script>
+  <script src="/times/minimal/renderer.js"></script>
+  <script src="/times/retro/renderer.js"></script>
+  <script src="/times/binary/renderer.js"></script>
+  <script src="/times/lcd/renderer.js"></script>
+  <script src="/times/analog/renderer.js"></script>
+  <script src="/times/flip/renderer.js"></script>
+  <script src="/times/nixie/renderer.js"></script>
+  <script src="/times/neon/renderer.js"></script>
+  <script src="/times/word/renderer.js"></script>
+  <script src="/times/sun/renderer.js"></script>
+  <script src="/times/calendar/renderer.js"></script>
+  <script src="/times/matrix/renderer.js"></script>
+  <script src="/times/gradient/renderer.js"></script>
 
   <!-- UI -->
   <script src="/js/ui/fullscreen.js"></script>
