feat: add 10 new text themes (vfd, chalk, stamp, cinema, gothic, railway, sticker, embroidery, smoke, sand)
New themes with full Settings panel integration, scale support, and i18n
(en/zh/ja/ko/es/fr/de):

- VFD: vacuum fluorescent 14-segment display with phosphor glow and
  glass tube reflections (Canvas)
- Chalk: chalkboard with rough chalk texture and dust particles (Canvas)
- Stamp: rubber stamp on aged paper with ink bleed and smudges (DOM/CSS)
- Cinema: theater marquee letterboard with felt background (DOM)
- Gothic: medieval illuminated manuscript with gold-leaf and wax seal
  (DOM/CSS)
- Railway: Solari split-flap departure board with mechanical flip
  animation (DOM/CSS 3D)
- Sticker: vinyl sticker with holographic/glossy/matte finish and
  optional glitter particles (DOM/CSS + Canvas)
- Embroidery: cross-stitch on linen fabric with wooden hoop and tension
  control (Canvas)
- Smoke: particle smoke forming/dissolving text with god rays (Canvas)
- Sand: beach sand carving with animated waves and foam (Canvas)

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
   <link rel="stylesheet" href="/texts/street-sign/style.css">
   <link rel="stylesheet" href="/texts/do-not-disturb/style.css">
   <link rel="stylesheet" href="/texts/dot-matrix/style.css">
+  <link rel="stylesheet" href="/texts/vfd/style.css">
+  <link rel="stylesheet" href="/texts/chalk/style.css">
+  <link rel="stylesheet" href="/texts/stamp/style.css">
+  <link rel="stylesheet" href="/texts/cinema/style.css">
+  <link rel="stylesheet" href="/texts/gothic/style.css">
+  <link rel="stylesheet" href="/texts/railway/style.css">
+  <link rel="stylesheet" href="/texts/sticker/style.css">
+  <link rel="stylesheet" href="/texts/embroidery/style.css">
+  <link rel="stylesheet" href="/texts/smoke/style.css">
+  <link rel="stylesheet" href="/texts/sand/style.css">
 </head>
 <body>
   <div id="app">
@@ -103,6 +113,16 @@
   <script src="/texts/street-sign/renderer.js"></script>
   <script src="/texts/do-not-disturb/renderer.js"></script>
   <script src="/texts/dot-matrix/renderer.js"></script>
+  <script src="/texts/vfd/renderer.js"></script>
+  <script src="/texts/chalk/renderer.js"></script>
+  <script src="/texts/stamp/renderer.js"></script>
+  <script src="/texts/cinema/renderer.js"></script>
+  <script src="/texts/gothic/renderer.js"></script>
+  <script src="/texts/railway/renderer.js"></script>
+  <script src="/texts/sticker/renderer.js"></script>
+  <script src="/texts/embroidery/renderer.js"></script>
+  <script src="/texts/smoke/renderer.js"></script>
+  <script src="/texts/sand/renderer.js"></script>
 
   <!-- Light Effects -->
   <script src="/lights/solid/renderer.js"></script>
