feat: add nologin.tools verified badge to landing page
Integrate NoLogin badge via meta tag, SVG badge in footer,
and supporting styles for the no-account verification signal.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="led.run — Display Toolkit">
   <meta name="twitter:description" content="Turn any screen into a text sign, light effect, sound visualizer, clock display, QR code, or camera filter. 80+ display modes. No apps, no accounts — just a URL.">
+  <meta name="nologin-verified" content="led-run">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
