feat: add Draw product with 10 themes and URL-based sharing
Add 7th product (Draw) for freehand drawing on full-screen canvas with
mouse/touch input, 10 visual themes, and LZ-String compressed URL sharing.

New files:
- js/vendor/lz-string.js: compression library for URL-safe serialization
- js/core/draw-engine.js: input handling, stroke data, undo/redo, serialization
- js/core/draw-manager.js: theme registry and lifecycle management
- draws/*/renderer.js: 10 themes (default, neon, chalk, glow-stick, watercolor,
  spray, pixel, calligraphy, crayon, sparkle)

Modified files:
- url-parser.js: add draw routing
- app.js: add _initDraw, landing page tab, presets, builder
- controls.js: add Ctrl+Z/Shift+Z undo/redo, noDblClick support
- toolbar.js: add lock/undo/clear buttons, share URL with drawing data
- settings.js: add draw adapter with proper theme switching and URL sync
- index.html: add script tags for new files
- _redirects: add /draws/* rule
- locales/*.js: add i18n strings for all 7 languages
- CLAUDE.md: update documentation for Draw product

--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
   <script src="/js/core/time-manager.js"></script>
   <script src="/js/core/time-utils.js"></script>
   <script src="/js/vendor/qrcodegen.js"></script>
+  <script src="/js/vendor/lz-string.js"></script>
   <script src="/js/core/qr-manager.js"></script>
   <script src="/js/core/camera-engine.js"></script>
   <script src="/js/core/camera-manager.js"></script>
+  <script src="/js/core/draw-engine.js"></script>
+  <script src="/js/core/draw-manager.js"></script>
   <script src="/js/core/i18n.js"></script>
 
   <!-- Locales -->
@@ -174,6 +177,18 @@
   <script src="/cameras/ascii/renderer.js"></script>
   <script src="/cameras/pixel/renderer.js"></script>
   <script src="/cameras/surveillance/renderer.js"></script>
+
+  <!-- Draw Themes -->
+  <script src="/draws/default/renderer.js"></script>
+  <script src="/draws/neon/renderer.js"></script>
+  <script src="/draws/chalk/renderer.js"></script>
+  <script src="/draws/glow-stick/renderer.js"></script>
+  <script src="/draws/watercolor/renderer.js"></script>
+  <script src="/draws/spray/renderer.js"></script>
+  <script src="/draws/pixel/renderer.js"></script>
+  <script src="/draws/calligraphy/renderer.js"></script>
+  <script src="/draws/crayon/renderer.js"></script>
+  <script src="/draws/sparkle/renderer.js"></script>
 
   <!-- Clock Themes -->
   <script src="/times/digital/renderer.js"></script>
