feat(draw): add LED matrix and laser themes, fix builder params
- Add LED dot matrix theme with glowing dots on dark unlit grid
- Add laser engraving theme with heat glow on brushed metal
- Fix builder: use theme defaults instead of hardcoded values
- Fix builder: append custom theme params to URL
- Add opacity/smooth slider controls to builder
- Add KNOWN_PARAMS for texture, wax, ledSize, power, engrave
- Add i18n translations for new themes and params in all 7 locales

--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
   <script src="/draws/calligraphy/renderer.js"></script>
   <script src="/draws/crayon/renderer.js"></script>
   <script src="/draws/sparkle/renderer.js"></script>
+  <script src="/draws/led/renderer.js"></script>
+  <script src="/draws/laser/renderer.js"></script>
 
   <!-- Clock Themes -->
   <script src="/times/digital/renderer.js"></script>
